<resources>
    <string name="app_name">Gnote</string>

    <string name="str_email">E-mail</string>
    <string name="str_nome">Nome</string>
    <string name="str_cadastrar">Cadastrar</string>
    <string name="str_login">Login</string>
    <string name="title_activity_controle">ControleActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gnote de:</string>
    <string name="action_settings">Settings</string>

    <string name="str_cadastro">Cadastrar Dados Pessoais:</string>

    <!--    strings do menu     -->
    <string name="menu_home_registros">Registros</string>
    <string name="menu_mensal">Visão Mensal</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_atualizar_dados">Atualizar dados insulina</string>
    <string name="menu_contato">Fale conosco</string>

    <string name="str_hipo">Glicose hipo:</string>
    <string name="str_hiper">Glicose hiper:</string>
    <string name="str_ideal_min">Intervalo ideal valor mínimo:</string>
    <string name="str_ideal_max">Intervalo ideal valor máximo:</string>

    <!--    cabeçalho editar/adicionar registro    -->
    <string name="str_editar_reg">Editar Registro:</string>
    <string name="str_adicionar_reg">Adicionar Registro:</string>
    <string name="str_spinner_mes">Selecione o mês:</string>

    <!--    contato    -->
    <string name="str_contato">Para entrar em contato envie e-mail para:</string>
    <string name="str_email_ana">anapereira.ssnfq@academico.ifsul.br</string>
    <string name="str_email_luciana">lucianaribeiro.ssnfq@academico.ifsul.br</string>

</resources>