<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_hipo_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_hipo"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_progress_hipo_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_hipo_atualizar"
            android:layout_width="317dp"
            android:layout_height="24dp"
            android:layout_marginTop="16sp"
            android:max="220"
            android:min="0"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_hiper_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_hiper"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_progress_hiper_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_hiper_atualizar"
            android:layout_width="317dp"
            android:layout_height="24dp"
            android:layout_marginTop="16sp"
            android:max="220"
            android:min="0"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ideal_min_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ideal_min"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_progress_ideal_min_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_ideal_min_atualizar"
            android:layout_width="317dp"
            android:layout_height="24dp"
            android:layout_marginTop="16sp"
            android:max="220"
            android:min="0"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ideal_max_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ideal_max"
                android:textSize="16sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/tv_progress_ideal_max_atualizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/sb_ideal_max_atualizar"
            android:layout_width="317dp"
            android:layout_height="24dp"
            android:layout_marginTop="16sp"
            android:max="220"
            android:min="0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bt_salvar_insulina_atualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16sp"
            android:text="Insulina Correção:"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_glicose_inicial_atualizar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Glicose inicial correção">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_glicose_inicial_atualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_intervalo_glicose_atualizar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Intervalo de glicose">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_intervalo_glicose_atualizar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txt_dose_intervalo_atualizar"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Dose por intervalo">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dose_intervalo_atualizar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_salvar_insulina_atualizar"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/custom_button"
        android:text="salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>